monitoring/resources/grafana-ui/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - grafana.govirto.com
    secretName: grafana-tls
  rules:
  - host: grafana.govirto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
spec:
  rules:
  - host: grafana.govirto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
